syntax = "proto3";

import "ai/lzy/priv/v2/lzy-auth.proto";
import "ai/lzy/priv/v2/lzy-servant.proto";
import "ai/lzy/priv/v2/lzy-server.proto";
import "ai/lzy/priv/v2/lzy-zygote.proto";
import "ai/lzy/priv/v2/lzy-task.proto";
import "ai/lzy/priv/v2/lzy-channel.proto";
import "ai/lzy/priv/v2/lzy-whiteboard.proto";
import "ai/lzy/priv/v2/lzy-fs.proto";

package ai.lzy.priv.v2;

option java_outer_classname = "Kharon";
option java_package = "ai.lzy.priv.v2";


service LzyKharon {
  // API for terminal
  rpc AttachTerminal (stream ServerCommand) returns (stream TerminalCommand);
  rpc WriteToInputSlot(stream SendSlotDataMessage) returns (ReceivedDataStatus);
  rpc OpenOutputSlot (SlotRequest) returns (stream Message);
}

message ServerCommand {
  oneof progress {
    AttachTerminal attachTerminal = 1;
    SlotAttach attach = 2;
    SlotDetach detach = 3;
    TerminalResponse terminalResponse = 4;
  }
}

message AttachTerminal {
  UserCredentials auth = 1;
}

message TerminalResponse {
  string commandId = 1;
  oneof content {
    SlotCommandStatus slotStatus = 2;
  }
}

message TerminalCommand {
  string commandId = 1;
  oneof command {
    SlotCommand slotCommand = 2;
  }
}

message SendSlotDataMessage {
  oneof writeCommand {
    SlotRequest request = 1;
    Message message = 2;
  }
}

message ReceivedDataStatus {
  Status status = 1;
  int64 offset = 2;

  enum Status {
    OK = 0;
    FAILED = 1;
  }
}
